# LightCaster-2D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/core/: Circle.cpp  Circle.hpp  LineSegment.cpp  LineSegment.hpp  Ray.hpp  Vec2.hpp
src/graphics/: Renderer.cpp  Renderer.hpp
